<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnswerActivity">

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/points"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        tools:ignore="TextContrastCheck" />


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/instacenterclord"
        android:contentDescription="@string/next_button"
        android:text="@string/next_button"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/question_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/app_name"
        android:layout_marginTop="25dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                android:text="@string/placeholder"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/possible_answers"
        android:layout_below="@id/question_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                android:text="@string/possible_answers"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/answers_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@color/instacenterclord"
                android:divider="@color/white"
                android:dividerHeight="16dp"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>