<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:padding="16dp"
        />

    <androidx.cardview.widget.CardView
        android:id = "@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/app_name"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questions"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/question"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/questions"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#78909C"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/card_1"
        android:layout_marginTop="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/category"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/card_2"
        android:layout_marginTop="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textColor="@color/black"
                android:textSize="25sp"
                />
            <Spinner
                android:id="@+id/difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/difficulty"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/card_3"
        android:layout_marginTop="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="25sp"
                />
            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/type"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/card_4"
        android:layout_marginTop="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/blue_link"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>